--- a/quiz.css
+++ b/quiz.css
@@ -1,1 +1,6 @@
-
+#logo {
+    width: max(100px, 18vw);
+    background-color: #0a0a23;
+    aspect-ratio: 35/4; /*these make the logo visible*/
+    padding: 0.4rem;
+}
