--- a/quiz.css
+++ b/quiz.css
@@ -17,11 +17,16 @@ header {
     width: 100%;
     background-color: #1b1b32;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
 }
 
 h1 {
     color: #f1be32;
     font-size: min(5vw, 1.2em);
+    text-align: center;
 }
 
 nav {
@@ -34,6 +39,11 @@ nav {
 nav > ul {
     justify-content: space-evenly;
     display: flex;
+    align-items: center;
+    padding-inline-start: 0;
+    margin-block: 0;
+    height: 100%;
+    flex-wrap: wrap;
 }
 
 h1, h2 {
@@ -77,8 +87,17 @@ nav li:hover {
     color: #1b1b32;
     cursor: pointer;
 }
+
+section {
+    width: 80%;
+    margin: auto;
+    margin-top: 0;
+    margin-bottom: 10px;
+    max-width: 600px;
+}
   
   /*This is my own margin for now*/
-  main, footer{
-    margin: 2rem;
+main, footer{
+    margin: 1rem;
+    padding-top: 25px;
   }
