--- a/quiz.css
+++ b/quiz.css
@@ -51,7 +51,71 @@ h1, h2 {
 }
   
 h2 {
-    border-bottom: 4px solid #dfdfe2
+    border-bottom: 4px solid #dfdfe2;
+    margin-top: 0;
+    padding-top: 60px;
+}
+
+.info {
+    padding: 10px 0 0 10px;
+}
+
+.formrow {
+    margin-top: 10px;
+    padding: 0 10px 0 10px;
+}
+
+input {
+    font-size: 15px;
+}
+
+.info input, .info label {
+    display: inline-block;
+}
+
+.info input {
+    width: 50%;
+    text-align: left;
+}
+
+.info label {
+    width: 10%;
+    min-width: 55px;
+    text-align: right;
+}
+
+.question-block {
+    text-align: left;
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+    padding-top: 5px;
+}
+
+p {
+    margin-top: 5px;
+    padding-left: 15px;
+    font-size: 20px;
+}
+
+.question {
+    border-style: none;
+    padding-bottom: 0;
+}
+
+.answers-list {
+    list-style: none;
+    padding: 0;
+}
+
+button {
+    display: block;
+    margin: 40px auto;
+    width: 40%;
+    padding: 15px;
+    font-size: 23px;
+    background: #d0d0d5;
+    border: 3px solid #3b3b4f;
 }
 
 .sr-only { /* This is a common pattern to visually hide text for only screen readers to read*/
