--- a/quiz.css
+++ b/quiz.css
@@ -1,3 +1,12 @@
+/* Certain types of motion-based animations can cause discomfort for some users. In particular, people with vestibular disorders have sensitivity to certain motion triggers.
+
+The @media at-rule has a media feature called prefers-reduced-motion to set CSS based on the user's preferences. It can take one of the following values: reduce, no-preference */
+@media (prefers-reduced-motion: no-preference){
+    * {
+        scroll-behavior: smooth;
+    }
+}
+
 body {
     background: #f5f6f7;
     color: #1b1b32;
@@ -116,6 +125,21 @@ button {
     font-size: 23px;
     background: #d0d0d5;
     border: 3px solid #3b3b4f;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    background-color: #2a2a40;
+}
+
+footer,  footer a {
+    color: white;
+}
+
+address {
+    text-align: center;
+    padding: 1px 1px 20px 1px;
 }
 
 .sr-only { /* This is a common pattern to visually hide text for only screen readers to read*/
